# Kimi_GPU_Player

./: BUILD_GUIDE.md  CMakeLists.simple.txt  CMakeLists.txt  ENHANCED_DEMO.md  GPU_DETECTION_GUIDE.md  Makefile  Makefile.enhanced  Makefile.vulkan  README.md  demo.sh  demo_commands.txt  demo_enhanced.sh  gpu_detect  gpu_player_enhanced  gpu_player_simple
docs/: GPU_Player_Spec.md
include/: AudioEngine.h  IAudioDecoder.h  IAudioDevice.h  IGPUProcessor.h
include/gpu/: CudaProcessor.cuh  VulkanDetector.h  VulkanProcessor.h
src/: main.cpp  main_enhanced_simple.cpp  main_simple.cpp  main_vulkan_demo.cpp  main_with_detection.cpp
src/core/: AudioEngine.cpp
src/gpu/: CudaProcessor.cu  GPUProcessorFactory.cpp  VulkanDetector.cpp  VulkanProcessor.cpp
tools/: gpu_detect_standalone.cpp  vulkan_detect.cpp
